<resources>
    <string name="app_name">Sirius</string>
    <string name="base_name">DoTA 2</string>
    <string name="gradeCnt">70M</string>
    <string name="tag_1">MOBA</string>
    <string name="tag_2">MULTIPLAYER</string>
    <string name="tag_3">STRATEGY</string>
    <string name="review_rati">Review &amp; Ratings</string>
    <string name="rati">4.9</string>
    <string name="m_reviews">70M Reviews</string>
    <string name="author_1">Auguste Conte</string>
    <string name="author_2">Jang Marcelino</string>
    <string name="data_1">February 14, 2019</string>
    <string name="data_2">February 14, 2019</string>
    <string name="feedback_1">“Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.”</string>
    <string name="feedback_2">“Once you start to learn its secrets, there’s a wild and exciting variety of play here that’s unmatched, even by its peers.”</string>
    <string name="install_button">Install</string>

    <string name="desc">Dota 2 is a multiplayer online battle arena (MOBA) game which has two teams of five players compete to collectively destroy a large structure defended by the opposing team known as the "Ancient", whilst defending their own.</string>
</resources>