<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="55dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/cover_frame"
                android:layout_width="match_parent"
                android:layout_height="234dp">

                <ImageView
                    android:id="@+id/cover"
                    android:layout_width="match_parent"
                    android:layout_height="208dp"
                    android:scaleType="centerCrop"
                    android:scaleX="1.4"
                    android:scaleY="1.4"
                    app:srcCompat="@drawable/cover_image" />

                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="20dp">

                    <Button
                        android:id="@+id/more_btn"
                        android:layout_width = "65dp"
                        android:layout_height = "65dp"
                        android:background = "@drawable/oval"
                        android:layout_alignParentEnd="true"
                        android:paddingLeft="21dp"
                        android:drawableLeft="@drawable/ic_baseline_more_horiz_24"/>

                    <Button
                        android:id="@+id/return_btn"
                        android:layout_width="65dp"
                        android:layout_height="65dp"
                        android:layout_alignParentStart="true"
                        android:background="@drawable/oval"
                        android:paddingLeft="21dp"
                        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
                        />
                </RelativeLayout>

            </FrameLayout>

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/logo_image"
                    android:layout_width="130dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/logo_image" />

                <FrameLayout
                    android:id="@+id/name_frame"
                    android:layout_width="match_parent"
                    android:layout_height="101dp"
                    android:paddingLeft="130dp"
                    android:paddingTop="15dp">

                    <TextView
                        android:id="@+id/name"
                        style="@style/TextViewP1"

                        android:text="@string/base_name"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/gradeCnt"
                        style="@style/TextViewP3"

                        android:paddingLeft="105dp"
                        android:paddingTop="32dp"
                        android:text="@string/gradeCnt"
                        android:textSize="16dp" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        android:layout_width="240dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="31dp"
                        android:theme="@style/SiriusRatingBar" />
                </FrameLayout>


            </RelativeLayout>

            <FrameLayout
                android:id="@+id/tags_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="14dp"
                tools:ignore="RtlSymmetry">

                <Button
                    android:id="@+id/tag_btn_1"
                    style="@style/ButtonTag"
                    android:text="@string/tag_1" />

                <Button
                    android:id="@+id/tag_btn_2"
                    style="@style/ButtonTag"
                    android:text="@string/tag_2"

                    android:layout_marginStart="95dp" />

                <Button
                    android:id="@+id/tag_btn_3"
                    style="@style/ButtonTag"
                    android:text="@string/tag_3"

                    android:layout_marginStart="233dp"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/description_frame"
                android:translationY="-2.3sp"
                style="@style/BaseFrame"
                android:paddingTop = "25dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/textView"
                    android:gravity="top"
                    style="@style/TextViewP2"
                    android:text="@string/desc"/>
            </FrameLayout>

            <FrameLayout
                style="@style/BaseFrame"
                android:paddingTop = "20dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/review_rati"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextViewP1"
                    android:text="@string/review_rati"
                    android:textSize="19dp"/>
            </FrameLayout>

            <FrameLayout
                style="@style/BaseFrame"
                android:paddingTop = "12dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextViewP1"
                    android:text="@string/rati"
                    android:textSize="58dp"/>

                <RatingBar
                    android:id="@+id/ratingBar2"
                    android:layout_width="240dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="101dp"
                    android:layout_marginTop="12dp"
                    android:theme="@style/SiriusRatingBar" />

                <TextView
                    android:id="@+id/gradeCnt_review"
                    style="@style/TextViewP3"

                    android:paddingLeft="101dp"
                    android:paddingTop="39dp"
                    android:text="@string/m_reviews"
                    android:textSize="16dp" />

            </FrameLayout>

            <FrameLayout
                style="@style/BaseFrame"
                android:layout_width="match_parent"
                android:layout_marginBottom="10dp"
                android:paddingTop = "18dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/line"
                    android:layout_width="360dp"
                    android:layout_height="0.5dp"
                    android:width="301dp"
                    android:background="#ffffff"
                    android:text="" />
            </FrameLayout>

            <FrameLayout
                style="@style/BaseFrame"
                android:layout_width="match_parent"

                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="30dp"
                    android:elevation="10dp"
                    android:layout_marginTop = "12dp"
                    android:layout_marginLeft = "2dp">

                    <ImageView
                        android:id="@+id/roundedImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/img_user_1"
                        android:scaleType="centerCrop"
                        />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/author_1"
                    android:paddingTop = "25dp"
                    android:gravity="top"
                    style="@style/TextViewP2"
                    android:textColor="@color/text_p1"
                    android:text="@string/author_1"
                    android:textSize="17dp"
                    android:layout_marginLeft="80dp" />

                <TextView
                    android:id="@+id/data_1"
                    android:paddingTop = "25dp"
                    android:gravity="top"
                    style="@style/TextViewP3"
                    android:text="@string/data_1"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="24dp"/>

                <TextView
                    android:id="@+id/feedback_1"
                    android:paddingTop = "30dp"
                    android:gravity="top"
                    style="@style/TextViewP2"
                    android:text="@string/feedback_1"
                    android:layout_marginTop="58dp"/>
            </FrameLayout>

            <FrameLayout
                style="@style/BaseFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="30dp"
                    android:elevation="10dp"
                    android:layout_marginTop = "12dp"
                    android:layout_marginLeft = "2dp">

                    <ImageView
                        android:id="@+id/roundedImageView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/img_user_2"
                        android:scaleType="centerCrop"
                        />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/author_2"
                    android:gravity="top"
                    android:paddingTop = "25dp"
                    style="@style/TextViewP2"
                    android:textColor="@color/text_p1"
                    android:text="@string/author_2"
                    android:textSize="17dp"
                    android:layout_marginLeft="80dp"/>

                <TextView
                    android:id="@+id/data_2"
                    android:paddingTop = "25dp"
                    android:gravity="top"
                    style="@style/TextViewP3"
                    android:text="@string/data_2"
                    android:layout_marginLeft="80dp"
                    android:layout_marginTop="24dp"/>

                <TextView
                    android:id="@+id/feedback_2"
                    android:paddingTop = "30dp"
                    android:gravity="top"
                    style="@style/TextViewP2"
                    android:text="@string/feedback_1"
                    android:layout_marginTop="58dp"/>
            </FrameLayout>

        <FrameLayout
            style="@style/BaseFrame"
            android:layout_width="match_parent"

            android:paddingTop = "25dp"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:text="@string/install_button"
                android:fontFamily="@font/sk_modernist_bold"
                android:textColor="#050B18"
                android:backgroundTint="#F4D144"
                android:textAllCaps="false"
                android:textSize="17sp"
                />

        </FrameLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>